@@ -405,17 +405,14 @@ manpages = [
    'sd_bus_reply_method_errorf',
    'sd_bus_reply_method_errorfv'],
   ''],
- ['sd_bus_reply_method_return',
-  '3',
-  ['sd_bus_reply', 'sd_bus_reply_method_returnv'],
-  ''],
+ ['sd_bus_reply_method_return', '3', ['sd_bus_reply_method_returnv'], ''],
  ['sd_bus_request_name',
   '3',
   ['sd_bus_release_name',
    'sd_bus_release_name_async',
    'sd_bus_request_name_async'],
   ''],
- ['sd_bus_send', '3', ['sd_bus_send_to'], ''],
+ ['sd_bus_send', '3', ['sd_bus_message_send', 'sd_bus_send_to'], ''],
  ['sd_bus_set_address', '3', ['sd_bus_get_address', 'sd_bus_set_exec'], ''],
  ['sd_bus_set_close_on_exit', '3', ['sd_bus_get_close_on_exit'], ''],
  ['sd_bus_set_connected_signal', '3', ['sd_bus_get_connected_signal'], ''],
